Changelog
=========

0.1dev (unreleased)
----------------------

- Made title for data record form same as rest of Plone via CSS and
  adjusted DGF fields.
  [David]
- Created work-around for KSS validation on fields.  All values always validate
  now until further notice.
  [David]
- Added Collection Type and IP field to data record content type
  [David]
- Refactor vocabularies out of our content type
  [David]
- Rework sources logic to let child sources return any SQLAlchemy conditions
  they like.  By default, we operate by or'ing all fields specified if the 
  search is inexact, and and'ing all fields if the search is exact.
  [David]
- Added new dependencies (jcu.theme, collective.z3cwidget.datagridfield,
  collective.geo.bundle)
  [David]
- Making the display view into a dexterity.DisplayForm (to get widgets, etc).
  [David]
- Removing the keycode from the keywords widget.
  [David]
- Made the autocomplete widgets not autofill by default.  There is a bug
  with this code and this needs to be sorted out upstream.
  [David]
- Refactored the database configuration functionality into the utils module.
  [David] 
- Put the user search into play on the Associations tab.  Javascript fixes
  required.
  [David]
- Finalised extendability of source query class -- we can now have custom
  query clauses without having to customise our entire search function.
  [David]
- Updated documentation against source classes
  [David]
- Added a UserQuerySource for loading user information from ITR's Oracle 
  database.
  [David]
- Made the database configuration much more modular.  We can now specify
  essentially all configuration in the buildout.cfg files and have our product
  load our SQLAlchemy connection up for us.  Then we only need to specify
  what connection to use and use it!
  [David]
- Made the keywords source work off the newly provided Oracle database table.
  Keyword searches work against both fields in the table.
  [David]